--- a/locales/pt-BR.yml
+++ b/locales/pt-BR.yml
@@ -1,14 +1,16 @@
 button:
   about: Sobre
   back: Voltar
+  blog: 'Blog'
   go: Ir
   home: Início
+  projects: 'Projetos'
   toggle_dark: Alternar modo escuro
   toggle_langs: Mudar de idioma
 intro:
+  aka: Também conhecido como
   desc: Modelo Opinativo de Partida de Vite
   dynamic-route: Demonstração de rota dinâmica
   hi: Olá, {name}!
-  aka: Também conhecido como
   whats-your-name: Qual é o seu nome?
 not-found: Não encontrado
