--- a/locales/en.yml
+++ b/locales/en.yml
@@ -1,12 +1,13 @@
 button:
   about: About
   back: Back
-  blog: Blog
+  education: Education
   go: GO
   home: Home
   projects: Projects
   toggle_dark: Toggle dark mode
   toggle_langs: Change languages
+  work: Work
 intro:
   aka: Also known as
   desc: Opinionated Vite Starter Template
